Remove dependency of javax.DataTypeConverter and use Commons Codec - for Android Compatibility